@@ -10,6 +10,8 @@ Moqui Framework 1.3.3 is a minor new feature and bug fix release.
 New Features:
 
 - Added ISO 8601 date/time parsing as another default in L10nFacade
+- Added transaction-facade.@use-transaction-cache attribute, defaults to
+  true, set to false to disable the TransactionCache globally
 
 Bug Fixes:
 
